force-app/main/default/objects/geopointe__GP_Default_Mapping__c/fields/geopointe__Geopointe_Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Geopointe_Object_Mapping__c</fullName>
    <label>Geopointe Object Mapping</label>
    <referenceTo>geopointe__GP_Object_Mapping__c</referenceTo>
    <relationshipLabel>Geopointe Default Mappings</relationshipLabel>
    <relationshipName>Geopointe_Default_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>