force-app/main/default/objects/geopointe__GP_Default_Mapping__c/fields/geopointe__Order__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>