force-app/main/default/objects/geopointe__GP_Default_Mapping__c/fields/geopointe__Value__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>